--- a/Candidate.html
+++ b/Candidate.html
@@ -50,7 +50,7 @@
                             </a>
                             <hr class="dropdown-divider bg-dark"/>
                             <a id="nav-hover" href="Add_Comelec.html" class="nav-link "><div class="sb-nav-link-icon"><i
-                                    class="fa fa-user me-2" id="icon"></i></div>Comelec</a>
+                                    class="fa fa-user me-2" id="icon"></i></div>COMELEC</a>
                             <hr class="dropdown-divider bg-dark"/>
                             <a id="nav-hover" href="Interview.html" class="nav-link"><div class="sb-nav-link-icon"><i 
                                 class="fa-solid fa-podcast" id="icon"></i></div>Interview</a>
@@ -88,7 +88,7 @@
 
                     </div>
                     <hr>
-                    <div class="card mx-3 my-3 mt-3 mb-4" id="shadow" style="border-radius: 15px;">
+                    <div class="card mx-3 my-3 mt-3 mb-4" id="shadow">
                         <div class="card-body table-responsive">
                             <table class="table table-hover" id="datatablesSimple">
                                 <thead>
