--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css">
         <link href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css" rel="stylesheet" />
-
+        
     </head>
     <body class="sb-nav-fixed">
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-primary">
@@ -50,7 +50,7 @@
                             </a>
                             <hr class="dropdown-divider bg-dark"/>
                             <a id="nav-hover" href="Add_Comelec.html" class="nav-link "><div class="sb-nav-link-icon"><i
-                                    class="fa fa-user me-2" id="icon"></i></div>Comelec</a>
+                                    class="fa fa-user me-2" id="icon"></i></div>COMELEC</a>
                             <hr class="dropdown-divider bg-dark"/>
                             <a id="nav-hover" href="Interview.html" class="nav-link"><div class="sb-nav-link-icon"><i 
                                 class="fa-solid fa-podcast" id="icon"></i></div>Interview</a>
@@ -94,7 +94,7 @@
                        
                     </div>
                     <hr>
-                    <div class="card mx-3 my-3 mt-3 mb-4" id="shadow" style="border-radius: 15px;">
+                    <div class="card mx-3 my-3 mt-3 mb-4" id="shadow">
                         <div class="card-body table-responsive">
                             <table class="table table-hover" id="datatablesSimple">
                                 <thead>
@@ -217,6 +217,10 @@
             $(document).ready(function () {
                 $('#datatablesSimple').DataTable();
             });
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/smooth-scroll/dist/smooth-scroll.min.js"></script>
+        <script>
+            var scroll = new SmoothScroll('a[href*="Add_Comelec.html"]');
         </script>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
