--- a/Election.html
+++ b/Election.html
@@ -172,7 +172,7 @@
                                                 <input type="text" class="form-control" name="input" id="input">
                                             </div>
                                             
-                                            <div class="d-flex justify-content-center">
+                                            <div class="d-flex justify-content-end">
                                                 <button type="button" class="btn btn-primary mt-3 mx-3" onclick="generateQR()" id="generate-btn">Generate QR Code</button>
 
                                                 <button type="button" class="btn btn-primary mt-3" onclick="downloadQR()" id="download-btn" disabled>Download QR Code</button>
